--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,8 +1,8 @@
 {
-	"background_color": "#ffffff",
-	"theme_color": "#333333",
-	"name": "TODO",
-	"short_name": "TODO",
+	"background_color": "#000",
+	"theme_color": "#000",
+	"name": "Terminal Dogma",
+	"short_name": "Terminal Dogma",
 	"display": "minimal-ui",
 	"start_url": "/",
 	"icons": [
